--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -1,16 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Content Manager</title>
-  <!-- Netlify Identity Widget -->
-  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+  <title>لوحة تحكم معرض أعمال عمر</title>
+  <!-- Netlify CMS (Decap CMS) script -->
+  <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
 </head>
 <body>
-  <!-- Include the Decap CMS script -->
-  <script src="https://unpkg.com/decap-cms@3.0.0/dist/decap-cms.js"></script>
-  <!-- تمت إزالة كتلة JavaScript المخصصة هنا للسماح لـ Decap CMS بالتعامل مع Netlify Identity تلقائيًا -->
+  <!-- This is where the CMS will be loaded -->
 </body>
 </html>
 
