--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -3,12 +3,24 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>لوحة تحكم معرض أعمال عمر</title>
+  <title>لوحة التحكم</title>
   <!-- Netlify CMS (Decap CMS) script -->
   <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
 </head>
 <body>
   <!-- This is where the CMS will be loaded -->
+  <script>
+    // Initialize Netlify Identity for CMS
+    if (window.netlifyIdentity) {
+      window.netlifyIdentity.on("init", user => {
+        if (!user) {
+          window.netlifyIdentity.on("login", () => {
+            document.location.href = "/admin/";
+          });
+        }
+      });
+    }
+  </script>
 </body>
 </html>
 
